@@ -65,20 +65,27 @@ Chains
 ufw uses several chains to allow ease of use and flexibility. The chains are
 organized as follows:
 
-INPUT -> ufw-before-input -> ufw-user-input -> ufw-after-input
-OUTPUT -> ufw-before-output -> ufw-user-output -> ufw-after-output
-FORWARD -> ufw-before-forward -> ufw-user-forward -> ufw-after-forward
+INPUT -> ufw-before-input -> ufw-user-input -> ufw-after-input ->
+  ufw-reject-input
+OUTPUT -> ufw-before-output -> ufw-user-output -> ufw-after-output ->
+  ufw-reject-output
+FORWARD -> ufw-before-forward -> ufw-user-forward -> ufw-after-forward ->
+  ufw-reject-forward
 
 The 'before' chains are setup in 'before.rules', the 'after' chains in
 'after.rules' and the 'user' chains are maintained by ufw. If an administrator
 wants to add rules manually, the rules should be added to 'before.rules' and
-'after.rules'.
+'after.rules'. The 'reject' chains are used for when the default policy is
+set to REJECT* (because iptables does not support REJECT as a target at this
+time).
 
 There is some default configuration in both 'before.rules' and 'after.rules',
 and this configuration is not displayed with 'ufw status' (but can always
 be viewed with 'iptables -L -n' or 'iptables -L [chain] -n'. See the iptables
 man page for details.
 
+* as a result, ufw will end up rejecting rules that are added outside of ufw
+  and after ufw is started.
 
 Advanced Configuration
 ----------------------
